Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2881945 by drunken monkey: Removed unnecessary check in
  AddURL::addFieldValues().
- #2886981 by drunken monkey: Fixed test fails for latest Core changes.
- #2880026 by Anton4yk, drunken monkey: Fixed bugs in entity datasource's item
  discovery code for edge cases.
- #2881631 by jzavrl, drunken monkey, borisson_: Added alphabetic sort for
  properties in "Add fields" form.
- #2867809 by drunken monkey, borisson_: Added an option to enable a processor
  for all compatible fields.
- #2878974 by acbramley: Added the date Views argument plugin.
- #2840274 by drunken monkey, borisson_: Updated the Core dependency to 8.3.
- #2874895 by harsha012, drunken monkey, borisson_: Fixed OOP code to use the
  t() method instead of the global t() function.
- #2624876 by drunken monkey, borisson_: Added a query option for "properties
  to retrieve".
- #2682949 by drunken monkey, borisson_: Adapted to changes in the Autocomplete
  module.

Search API 1.1 (2017-05-10):
----------------------------
- #2858303 by beluoctavian, drunken monkey: Fixed "is empty" Views filters for
  taxonomy term references.
- #2873246 by drunken monkey: Fixed a second error for cached aborted search
  queries in Views.
- #2862289 by hoebekewim, drunken monkey: Fixed oversized column for fulltext
  fields in denormalized index table.
- #2859683 by drunken monkey: Added a note to fields processors explaining that
  per-field keywords processing isn't supported.
- #2871497 by drunken monkey: Fixed validation of "Whitespace characters"
  setting for the Tokenizer processor.
- #2868704 by drunken monkey: Fixed old removed fields being present on query
  object.
- #2863955 by alan-ps, drunken monkey, borisson_: Fixed unsupported processors
  remaining enabled.
- #2870988 by sahilsharma011, c.nish2k3, kala4ek: Removed translations from all
  tests.
- #2871030 by drunken monkey: Fixed error for cached aborted search queries in
  Views.