@@ -66,11 +66,11 @@ class SearchApiFulltext extends FilterPluginBase {
   /**
    * {@inheritdoc}
    */
-  protected function operatorForm(&$form, FormStateInterface $form_state) {
-    parent::operatorForm($form, $form_state);
+  public function showOperatorForm(&$form, FormStateInterface $form_state) {
+    parent::showOperatorForm($form, $form_state);
 
     if (!empty($form['operator'])) {
-      $form['operator']['#description'] = $this->t('Based on the parse mode set, some of these options might not work as expected. Please either use "Multiple terms" as the parse mode or make sure that the filter behaves as expected for multiple words.');
+      $form['operator']['#description'] = $this->t('Depending on the parse mode set, some of these options might not work as expected. Please either use "@multiple_words" as the parse mode or make sure that the filter behaves as expected for multiple words.', ['@multiple_words' => $this->t('Multiple words')]);
     }
   }
 
